--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -47,6 +47,7 @@
             <li><a href="/admin/orders">订房管理</a></li>
             <li><a href="/admin/articles">新闻管理</a></li>
             <li><a href="/admin/users">用户管理</a></li>
+            <li><a href="/admin/rooms">设施管理</a></li>
           </ul>
         </div>
         <div class="menutit"><span>&nbsp;&nbsp;</span>功能菜单</div>
