--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,23 +1,8 @@
-<h1>New order</h1>
-
 <% form_for(@order) do |f| %>
   <%= f.error_messages %>
 
-  <p>
-    <%= f.label :order_number %><br />
-    <%= f.text_field :order_number %>
-  </p>
-  <p>
-    <%= f.label :price %><br />
-    <%= f.text_field :price %>
-  </p>
-  <p>
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+  <%= render :partial => "form",:locals => {:f => f}%>
+
+  <%= f.submit '我要预订' %>
 <% end %>
 
-<%= link_to 'Back', orders_path %>
