--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,71 @@
-首页
-///////
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title></title>
+<link type="text/css" href="/stylesheets/index.css"    rel="stylesheet"/>
+<link href="/stylesheets/screen.css" rel="stylesheet" />
+</head>
+
+<body style="background:#eaeaea;">
+<div class="header">
+<div class="logo"><img src="images/logo.png" /></div>
+<div  class="menu">
+	<ul>
+		<li style="width:60px;" class="home"><a href="" style="width:60px;">首页</a></li>
+		<li style="width:3px;"><img src="images/nav.jpg" width="3" height="27" alt="" /></li>
+		<li><a href="">酒店介绍</a></li>
+		<li style="width:3px;"><img src="images/nav.jpg" width="3" height="27" alt="" /></li>
+		<li><a href="">客房设施</a></li>
+		<li style="width:3px;"><img src="images/nav.jpg" width="3" height="27" alt="" /></li>
+		<li><a href="">餐饮设施</a></li>
+		<li style="width:3px;"><img src="images/nav.jpg" width="3" height="27" alt="" /></li>
+		<li><a href="">会议设施</a></li>
+		<li style="width:3px;"><img src="images/nav.jpg" width="3" height="27" alt="" /></li>
+		<li><a href="">康乐设施</a></li>
+		<li style="width:3px;"><img src="images/nav.jpg" width="3" height="27" alt="" /></li>
+		<li><a href="">实景展示</a></li>
+		<li style="width:3px;"><img src="images/nav.jpg" width="3" height="27" alt="" /></li>
+		<li><a href="">酒店预订</a></li>
+	</ul>
+</div>
+</div>
+
+<div class="lunzu">
+<div class="lunzu_img"><img  src="images/lunzu.jpg" width="983" height="360" /></div>
+</div>
+
+<div class="News">
+	<div class="ylhotel">
+		<div class="ylhotel_nav">云莱宾馆</div>
+		<div class="ylhotel_line"></div>
+		<div class="ylhotel_con">
+		&nbsp;&nbsp;欢迎光临云莱饭店 云莱饭店是由锦江国际酒店管理有限公司在北京的旗舰店，于1989奶奶正式于1989年正式开业。
+1996年被国家旅游局评为“全国50佳星级饭店”欢迎光临云莱饭店 云莱饭店是由锦江国际酒店管理有限公司在北京的旗舰店，于1989奶奶正式于1989年正式开业。
+1996年被国家旅游局评为“全国50佳星级饭店”云莱饭店是由锦江国际酒店管理有限公司在北京的旗舰店云莱饭店是由锦江国际酒店管理有限公司在北京的旗舰店云莱饭店是由锦江国际酒店管理有限公司在北京的旗舰店云莱饭店京的旗舰旗舰店<a href="">>>详情</a>
+		</div>
+	</div>
+<div class="News_list">
+	<div class="ylhotel_news">新闻</div>
+	<div class="ylhotel_news_line"></div>
+	<div class="ylhotel_news_list">
+		<ul>
+			<li><a href="">云莱饭店是由锦江国限公司</a> 2011-03-24</li>
+			<li><a href="">云莱饭店是由锦理有限公司</a> 2011-03-24</li>
+			<li><a href="">云莱饭店是由店管理有限公司</a> 2011-03-24</li>
+			<li><a href="">云莱饭店是酒店管理有限公司</a> 2011-03-24</li>
+			<li><a href="">云莱饭店是酒店管理有限公司</a> 2011-03-24</li>
+		</ul>
+	</div>
+	<div class="ylhotel_news_more"><span><a href="">>>更多</a></span></div>
+</div>
+<div class="clear"></div>
+</div>
+<div class="bottom_line"></div>
+<div class="bottom">
+北京饭店版权所有 京ICP备05080156号 德比软件（上海）有限公司技术支持<br />地址：中国北京市东长安街三十三号 电话：(86-10)65137766 传真：(86-10)65137307 
+E-mail: iness@chinabejinghotel.com.cn
+</div>
+<div class="clear"></div>
+</body>
+</html>
